@@ -2,6 +2,7 @@
 v3.2.0-git
 ----------
 
+[mms] Fix regression in deactivating scripts (Bug #13297).
 
 
 ---------
